# Automat-komorkowy

./: Automat-komorkowy.sln  Baza.cpp  Baza.h  CMakeLists.txt  CMakeSettings.json  Editor.cpp  GUI.cpp  GUI.h  GUI.ui  Generate.cpp  Generate.h  Komorka.cpp  Komorka.h  Pole.cpp  README.md  Scope.cpp  Scope.h  Scope.ui  Worker.cpp  main.cpp  qrc_GUI.cpp
Automat-komorkowy/: Automat-komorkowy.vcxproj  Automat-komorkowy.vcxproj.filters  Baza.cpp  Baza.h  CMakeLists.txt  Configure.cpp  Configure.h  Configure.ui  Editor.cpp  Editor.h  Editor.ui  GUI.cpp  GUI.h  GUI.ui  Generate.h  Generate.ui  Komorka.cpp  Komorka.h  Pole.cpp  Pole.h  Scope.h  Styles.txt  Worker.cpp  Worker.h  main.cpp
Automat-komorkowy/GeneratedFiles/: qrc_GUI.cpp  ui_Editor.h  ui_FileSelect.h  ui_GUI.h  ui_Generate.h
Automat-komorkowy/GeneratedFiles/Debug/: moc_Editor.cpp  moc_GUI.cpp  moc_Generate.cpp  moc_Worker.cpp
Branch/: Generate.h  Generate.ui  Komorka.cpp  Pole.cpp  Pole.h
